--- a/public_html/scss/partials/_overide-bootstrap.scss
+++ b/public_html/scss/partials/_overide-bootstrap.scss
@@ -7,12 +7,17 @@ $primary: #ECD9D9;
 $headings-font-weight: 400;
 
 
+
 $font-size-base:1.6rem;
 $grid-gutter-width: 1.2rem;
 //$link-color:  $primary ;
 $link-decoration:  none;
+$navbar-light-icon-color:$primary;
+$navbar-light-toggler-border-color: $primary;
 
-
+$navbar-light-color: #1E1E1E;
+$navbar-light-hover-color: $primary;
+$navbar-light-active-color: $primary;
 
 
 
