--- a/public_html/css/theme.css
+++ b/public_html/css/theme.css
@@ -3254,21 +3254,21 @@ textarea.form-control-lg {
 .navbar {
   --bs-navbar-padding-x: 0;
   --bs-navbar-padding-y: 0.5rem;
-  --bs-navbar-color: rgba(var(--bs-emphasis-color-rgb), 0.65);
-  --bs-navbar-hover-color: rgba(var(--bs-emphasis-color-rgb), 0.8);
+  --bs-navbar-color: #1E1E1E;
+  --bs-navbar-hover-color: #ECD9D9;
   --bs-navbar-disabled-color: rgba(var(--bs-emphasis-color-rgb), 0.3);
-  --bs-navbar-active-color: rgba(var(--bs-emphasis-color-rgb), 1);
+  --bs-navbar-active-color: #ECD9D9;
   --bs-navbar-brand-padding-y: 0.2rem;
   --bs-navbar-brand-margin-end: 1rem;
   --bs-navbar-brand-font-size: 2rem;
-  --bs-navbar-brand-color: rgba(var(--bs-emphasis-color-rgb), 1);
-  --bs-navbar-brand-hover-color: rgba(var(--bs-emphasis-color-rgb), 1);
+  --bs-navbar-brand-color: #ECD9D9;
+  --bs-navbar-brand-hover-color: #ECD9D9;
   --bs-navbar-nav-link-padding-x: 0.5rem;
   --bs-navbar-toggler-padding-y: 0.25rem;
   --bs-navbar-toggler-padding-x: 0.75rem;
   --bs-navbar-toggler-font-size: 2rem;
-  --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%2830, 30, 30, 0.75%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
-  --bs-navbar-toggler-border-color: rgba(var(--bs-emphasis-color-rgb), 0.15);
+  --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='%23ECD9D9' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+  --bs-navbar-toggler-border-color: #ECD9D9;
   --bs-navbar-toggler-border-radius: 0.375rem;
   --bs-navbar-toggler-focus-width: 0.25rem;
   --bs-navbar-toggler-transition: box-shadow 0.15s ease-in-out;
@@ -9898,6 +9898,14 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/style.scss to edit thi
     Created on : Mar 30, 2023, 2:44:23 PM
     Author     : frontend
 */
+@font-face {
+  font-family: 'Bodoni';
+  src: url("./fonts/BodoniBook72/Bodoni-Book.eot");
+  src: local("Bodoni Book"), local("Bodoni-Book"), url("./fonts/BodoniBook72/Bodoni-Book.eot?#iefix") format("embedded-opentype"), url(".fonts/BodoniBook72/Bodoni-Book.woff2") format("woff2"), url("./fonts/BodoniBook72/Bodoni-Book.woff") format("woff"), url("./fonts/BodoniBook72/Bodoni-Book.ttf") format("truetype"), url(".fonts/BodoniBook72/Bodoni-Book.svg#Bodoni-Book") format("svg");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap; }
+
 /*
 Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/style.scss to edit this template
@@ -9986,14 +9994,74 @@ body {
   font-family: "Lato", sans-serif;
   font-weight: 300; }
 
-/*
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/style.scss to edit this template
-*/
-/*
-    Created on : Mar 30, 2023, 2:44:58 PM
-    Author     : frontend
-*/
+header {
+  padding: 3.2rem 0 3.1rem; }
+  header .navbar-brand {
+    max-width: 196px; }
+    header .navbar-brand img {
+      display: block; }
+  header .navbar-toggler {
+    outline: none !important;
+    box-shadow: none !important; }
+  header .navbar-nav .nav-item {
+    position: relative; }
+    @media (min-width: 992px) {
+      header .navbar-nav .nav-item {
+        position: relative; }
+        header .navbar-nav .nav-item:hover .submenu {
+          opacity: 1;
+          transform: rotateX(0) perspective(1000px); }
+        header .navbar-nav .nav-item:not(:last-of-type) {
+          margin-right: 7.2rem; } }
+    header .navbar-nav .nav-item .nav-link {
+      font-size: 14px;
+      font-family: "Lato", sans-serif;
+      font-weight: 400px;
+      line-height: 1.7rem;
+      text-transform: uppercase;
+      border-bottom: 0.1rem solid #ECD9D9;
+      position: relative; }
+      header .navbar-nav .nav-item .nav-link .toggle-submenu {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%; }
+        @media (min-width: 992px) {
+          header .navbar-nav .nav-item .nav-link .toggle-submenu {
+            display: none; } }
+      @media (min-width: 992px) {
+        header .navbar-nav .nav-item .nav-link {
+          border-bottom: none; }
+          header .navbar-nav .nav-item .nav-link.active:after {
+            content: '';
+            position: absolute;
+            height: 0.1rem;
+            top: 96%;
+            left: 0;
+            background-color: #ECD9D9;
+            width: 100%; } }
+    header .navbar-nav .nav-item .submenu {
+      padding-left: 20px;
+      display: none;
+      transition: 0.5s linear; }
+      @media (min-width: 992px) {
+        header .navbar-nav .nav-item .submenu {
+          display: block !important;
+          transform: rotateX(-90deg);
+          transform-origin: 0 0;
+          opacity: 0;
+          position: absolute;
+          top: 100%;
+          left: 0;
+          padding-left: 0px; } }
+      @media (min-width: 992px) {
+        header .navbar-nav .nav-item .submenu .nav-link {
+          white-space: nowrap; } }
+
 /*
 Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/style.scss to edit this template
