--- a/public_html/scss/partials/_fonts.scss
+++ b/public_html/scss/partials/_fonts.scss
@@ -8,3 +8,16 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/style.scss to edit thi
 */
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;1,300&display=swap');
+@font-face {
+    font-family: 'Bodoni';
+    src: url('./fonts/BodoniBook72/Bodoni-Book.eot');
+    src: local('Bodoni Book'), local('Bodoni-Book'),
+        url('./fonts/BodoniBook72/Bodoni-Book.eot?#iefix') format('embedded-opentype'),
+        url('.fonts/BodoniBook72/Bodoni-Book.woff2') format('woff2'),
+        url('./fonts/BodoniBook72/Bodoni-Book.woff') format('woff'),
+        url('./fonts/BodoniBook72/Bodoni-Book.ttf') format('truetype'),
+        url('.fonts/BodoniBook72/Bodoni-Book.svg#Bodoni-Book') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
