--- a/public_html/scss/partials/_header.scss
+++ b/public_html/scss/partials/_header.scss
@@ -1,9 +1,87 @@
-/*
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/style.scss to edit this template
-*/
-/*
-    Created on : Mar 30, 2023, 2:44:58 PM
-    Author     : frontend
-*/
 
+header{
+    padding: 3.2rem 0 3.1rem;
+    .navbar-brand{
+        max-width: 196px;
+        img{
+            display: block;
+        }
+    }
+    .navbar-toggler{
+        outline: none!important;
+        box-shadow: none!important;
+    }
+    .navbar-nav{
+        .nav-item{
+            position: relative;
+            @media(min-width:992px){
+                position: relative;
+                &:hover{
+                    .submenu{
+                        opacity: 1;
+                        transform: rotateX(0) perspective(1000px);
+                    }
+                }
+                &:not(:last-of-type){
+                    margin-right: 7.2rem;
+                }
+            }
+            .nav-link{
+                font-size: 14px;
+                font-family: $body-font;
+                font-weight: 400px;
+                line-height: 1.7rem;
+                text-transform: uppercase;
+                border-bottom: 0.1rem solid $primary;
+                position: relative;
+                .toggle-submenu{
+                    position: absolute;
+                    top:0;
+                    right:0;
+                    width: 50px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    height: 100%;
+                    @media(min-width:992px){
+                        display: none;
+                    }
+                }
+                @media(min-width:992px){
+                    border-bottom: none;
+                    &.active:after{
+                        content: '';
+                        position: absolute;
+                        height: 0.1rem;
+                        top: 96%;
+                        left: 0;
+                        background-color: $primary;
+                        width: 100%;
+                    }
+                }
+            }
+            .submenu{
+                padding-left: 20px;
+                display: none;
+                transition: 0.5s linear;
+                @media(min-width:992px){
+                    display: block !important;
+                    transform:rotateX(-90deg);
+                    transform-origin: 0 0;
+                    opacity: 0;
+                    position: absolute;
+                    top:100%;
+                    left: 0;
+                    padding-left: 0px;
+                }
+                .nav-link{
+                    @media(min-width:992px){
+                        white-space: nowrap;
+                    }
+                }
+
+            }
+        }
+    }
+
+}
