--- a/public_html/scss/partials/_variable.scss
+++ b/public_html/scss/partials/_variable.scss
@@ -8,5 +8,5 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/style.scss to edit thi
 */
 
 $lato: 'Lato', sans-serif;
-
+$bodoni: 'Bodoni';
 $body-font: $lato;
