--- a/public_html/scss/partials/_general.scss
+++ b/public_html/scss/partials/_general.scss
@@ -6,3 +6,21 @@ body{
     font-family: $body-font;
     font-weight: 300;
 }
+
+.section-big-title{
+    font-size: 4rem;
+    line-height: 4.5rem;
+    letter-spacing: 0.5rem;
+    font-family: $bodoni;
+    color: $white;
+    width: 100%;
+    max-width: 70.4rem;
+    padding: 2rem 0;
+    text-align: center;
+    margin: 0 auto;
+    @media(min-width:992px){
+        font-size: 6rem;
+        line-height: 8.2rem;
+        letter-spacing: 2rem;
+    }
+}
