--- a/public_html/scss/partials/_general.scss
+++ b/public_html/scss/partials/_general.scss
@@ -5,13 +5,14 @@ img{
 body{
     font-family: $body-font;
     font-weight: 300;
+    color: $body-color;
 }
-
 .section-big-title{
     font-size: 4rem;
     line-height: 4.5rem;
     letter-spacing: 0.5rem;
     font-family: $bodoni;
+    font-weight: normal;
     color: $white;
     width: 100%;
     max-width: 70.4rem;
@@ -22,5 +23,32 @@ body{
         font-size: 6rem;
         line-height: 8.2rem;
         letter-spacing: 2rem;
+    }
+}
+
+.section-title{
+    font-size: 2.2rem;
+    line-height: 3.5rem;
+    letter-spacing: 0.5rem;
+    text-align: left;
+    width: 100%;
+    max-width: 70.4rem;
+    font-family: $bodoni;
+    font-weight: normal;
+    position: relative;
+    padding-bottom: 2rem;
+    &:after{
+        content: '';
+        background: $primary;
+        display: block;
+        height: 0.1rem;
+        width: 7.4rem;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+    }
+    @media(min-width:992px){
+        font-size: 3rem;
+        line-height: 4.5rem;
     }
 }
