--- a/public_html/css/theme.css
+++ b/public_html/css/theme.css
@@ -10135,21 +10135,22 @@ header {
     .hero-section {
       padding: 218px 0 269px; } }
 
-@media (min-width) {
+@media (min-width: 992px) {
   .latest-news {
-    padding: 75px 0 56px; } }
+    padding: 75px 0 56px !important; } }
 
-.latest-news h2, .latest-news .h2 {
+.latest-news .section-title {
   margin-bottom: 1.6rem; }
   @media (min-width: 992px) {
-    .latest-news h2, .latest-news .h2 {
+    .latest-news .section-title {
       margin-bottom: 4.3rem; } }
 
 .latest-news .news-item div {
   background-color: #fff;
   width: 90%;
+  height: 16.1rem;
   max-width: 31.3rem;
-  padding: 18px 22px 57px 19px;
+  padding: 22px 18px 57px 19px;
   text-align: center;
   margin-inline: auto;
   margin-top: -22%;
@@ -10165,67 +10166,114 @@ header {
     width: 8.1rem;
     margin-bottom: 1.7rem;
     display: inline-block; }
-  .latest-news .news-item div h2 a, .latest-news .news-item div .h2 a {
+  .latest-news .news-item div h2, .latest-news .news-item div .h2 {
     font-family: "Lato", sans-serif;
     font-weight: 400;
     font-size: 1.6rem;
     line-height: 2.4rem;
-    width: 100%;
-    max-width: 27.6rem;
     text-align: center;
-    color: #1E1E1E !important; }
+    width: 100%;
+    max-width: 27.6rem; }
+    .latest-news .news-item div h2 a, .latest-news .news-item div .h2 a {
+      color: #1E1E1E !important;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden; }
 
-.services {
-  padding-bottom: 2rem; }
-  .services .section-title {
-    margin-bottom: 4.6rem; }
-  @media (min-width: 992px) {
-    .services {
-      padding-bottom: 11.1rem; } }
-  .services .services-item {
-    display: flex;
-    flex-direction: row; }
-    .services .services-item .row {
-      margin: 0; }
-    .services .services-item .services-contain {
-      padding: 5rem 9.5rem;
-      background-color: #F5F5F5; }
-      @media (min-width: 992px) {
-        .services .services-item .services-contain {
-          padding: 14.3rem 9.5rem 9.5rem; } }
-      .services .services-item .services-contain h2, .services .services-item .services-contain .h2 {
-        font-size: 2rem;
-        line-height: 3rem;
-        margin-bottom: 2rem;
-        text-align: left;
-        font-family: "Lato", sans-serif;
-        font-weight: 400;
-        text-transform: uppercase; }
-        @media (min-width: 1200px) {
-          .services .services-item .services-contain h2, .services .services-item .services-contain .h2 {
-            font-size: 3.6rem;
-            line-height: 4.4rem;
-            margin-bottom: 3.6rem; } }
-        .services .services-item .services-contain h2 a, .services .services-item .services-contain .h2 a {
-          color: #1E1E1E;
-          width: 100%;
-          max-width: 36.8rem; }
-    .services .services-item .btn:hover {
-      background-color: #565960;
-      color: #ECD9D9; }
-    .services .services-item:nth-of-type(2n) .services-contain {
-      background-color: #ECD9D9; }
-      @media (min-width: 768px) {
-        .services .services-item:nth-of-type(2n) .services-contain {
-          order: 1 !important; } }
-    .services .services-item .services-img {
-      padding: 0; }
-      @media (min-width: 768px) {
-        .services .services-item .services-img {
-          order: 1 !important; } }
+.services .section-title {
+  margin-bottom: 4.6rem; }
+
+.services .services-item {
+  display: flex;
+  flex-direction: row; }
+  .services .services-item .row {
+    margin: 0; }
+  .services .services-item .services-contain {
+    padding: 5rem 9.5rem;
+    background-color: #F5F5F5; }
+    @media (min-width: 992px) {
+      .services .services-item .services-contain {
+        padding: 14.3rem 9.5rem 9.5rem; } }
+    .services .services-item .services-contain h2, .services .services-item .services-contain .h2 {
+      font-size: 2rem;
+      line-height: 3rem;
+      margin-bottom: 2rem;
+      text-align: left;
+      font-family: "Lato", sans-serif;
+      font-weight: 400;
+      text-transform: uppercase; }
+      @media (min-width: 1200px) {
+        .services .services-item .services-contain h2, .services .services-item .services-contain .h2 {
+          font-size: 3.6rem;
+          line-height: 4.4rem;
+          margin-bottom: 3.6rem; } }
+      .services .services-item .services-contain h2 a, .services .services-item .services-contain .h2 a {
+        color: #1E1E1E;
+        width: 100%;
+        max-width: 36.8rem; }
+  .services .services-item .btn:hover {
+    background-color: #565960;
+    color: #ECD9D9; }
+  .services .services-item:nth-of-type(2n) .services-contain {
+    background-color: #ECD9D9; }
     @media (min-width: 768px) {
-      .services .services-item:nth-of-type(2n) .services-img {
-        order: 0 !important; } }
+      .services .services-item:nth-of-type(2n) .services-contain {
+        order: 1 !important; } }
+  .services .services-item .services-img {
+    padding: 0; }
+    @media (min-width: 768px) {
+      .services .services-item .services-img {
+        order: 1 !important; } }
+  @media (min-width: 768px) {
+    .services .services-item:nth-of-type(2n) .services-img {
+      order: 0 !important; } }
+
+.testimonials {
+  padding: 2rem; }
+  @media (min-width: 992px) {
+    .testimonials {
+      padding: 11.1rem 0 6.7rem; } }
+  .testimonials .section-title {
+    margin-bottom: 4.2rem; }
+  .testimonials .testimonals-slider {
+    border: 1px solid #ECD9D9;
+    padding: 5.4rem;
+    text-align: left; }
+    @media (min-width: 992px) {
+      .testimonials .testimonals-slider {
+        padding: 5.4rem 19.0rem 5.4rem 9.5rem; } }
+    .testimonials .testimonals-slider .testimonials-slider-item-image {
+      width: 100%;
+      max-width: 73.6rem; }
+    .testimonials .testimonals-slider .testimonials-slider-item-data {
+      padding: 3.1rem 0 4.8rem; }
+      .testimonials .testimonals-slider .testimonials-slider-item-data .testimonials-slider-item-title {
+        font-size: 2rem;
+        line-height: 1.7rem;
+        color: #1E1E1E;
+        width: 100%;
+        max-width: 31.2rem; }
+        @media (min-width: 992px) {
+          .testimonials .testimonals-slider .testimonials-slider-item-data .testimonials-slider-item-title {
+            font-size: 3rem;
+            line-height: 2.7rem;
+            margin-bottom: 3.5rem !important; } }
+      .testimonials .testimonals-slider .testimonials-slider-item-data p {
+        font-family: "Lato", sans-serif;
+        font-weight: 300 !important;
+        font-size: 1.6rem;
+        line-height: 2.3rem;
+        width: 100%;
+        max-width: 36.8rem;
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        margin-bottom: 0; }
+        @media (min-width: 992px) {
+          .testimonials .testimonals-slider .testimonials-slider-item-data p {
+            -webkit-line-clamp: 8; } }
 
 /*
 Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
