--- a/public_html/scss/partials/main/_latest-news.scss
+++ b/public_html/scss/partials/main/_latest-news.scss
@@ -1,8 +1,8 @@
 .latest-news{
-    @media(min-width){
-        padding: 75px 0 56px;
+    @media(min-width:992px){
+        padding: 75px 0 56px!important;
     }
-    h2{
+    .section-title{
         margin-bottom: 1.6rem;
         @media(min-width:992px){
             margin-bottom: 4.3rem;
@@ -15,8 +15,9 @@
         div{
             background-color:$white;
             width: 90%;
+            height: 16.1rem;
             max-width: 31.3rem;
-            padding: 18px 22px 57px 19px;
+            padding: 22px 18px 57px 19px;
             text-align: center;
             margin-inline: auto;
             margin-top: -22%;
@@ -33,17 +34,22 @@
                 margin-bottom: 1.7rem;
                 display: inline-block;
             }
-            h2 a{
+            h2{
                 font-family: $lato;
                 font-weight: 400;
                 font-size: 1.6rem;
                 line-height: 2.4rem;
+                text-align: center;
                 width: 100%;
                 max-width: 27.6rem;
-                text-align: center;
-                color: $body-color!important;
+                a{
+                    color: $body-color!important;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 2;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
+                }
             }
-
         }
     }
 }
