--- a/public_html/css/theme.css
+++ b/public_html/css/theme.css
@@ -10067,39 +10067,53 @@ header {
   header .navbar-toggler {
     outline: none !important;
     box-shadow: none !important; }
-  header .navbar-nav .nav-item {
-    position: relative; }
+  header .navbar-nav {
+    border-bottom: 0.1rem solid #ECD9D9; }
     @media (min-width: 992px) {
-      header .navbar-nav .nav-item {
-        position: relative; }
-        header .navbar-nav .nav-item:hover .submenu {
-          opacity: 1;
-          transform: rotateX(0) perspective(1000px); }
-        header .navbar-nav .nav-item:not(:last-of-type) {
-          margin-right: 7.2rem; } }
-    header .navbar-nav .nav-item .nav-link {
-      font-size: 14px;
-      font-family: "Lato", sans-serif;
-      font-weight: 400px;
-      line-height: 1.7rem;
-      text-transform: uppercase;
-      border-bottom: 0.1rem solid #ECD9D9;
+      header .navbar-nav {
+        border-bottom: none !important; } }
+    header .navbar-nav .nav-item {
       position: relative; }
-      header .navbar-nav .nav-item .nav-link .toggle-submenu {
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 50px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100%; }
-        @media (min-width: 992px) {
-          header .navbar-nav .nav-item .nav-link .toggle-submenu {
-            display: none; } }
+      header .navbar-nav .nav-item:not(:last-of-type) {
+        border-bottom: 0.1rem solid #ECD9D9; }
       @media (min-width: 992px) {
-        header .navbar-nav .nav-item .nav-link {
-          border-bottom: none; }
+        header .navbar-nav .nav-item {
+          position: relative; }
+          header .navbar-nav .nav-item:not(:last-of-type) {
+            border-bottom: none; }
+          header .navbar-nav .nav-item:hover:after {
+            content: '';
+            position: absolute;
+            height: 0.1rem;
+            top: 96%;
+            left: 0;
+            background-color: #ECD9D9;
+            width: 100%; }
+          header .navbar-nav .nav-item:hover .submenu {
+            opacity: 1;
+            transform: rotateX(0) perspective(1000px); }
+          header .navbar-nav .nav-item:not(:last-of-type) {
+            margin-right: 7.2rem; } }
+      header .navbar-nav .nav-item .nav-link {
+        font-size: 14px;
+        font-family: "Lato", sans-serif;
+        font-weight: 400px;
+        line-height: 1.7rem;
+        text-transform: uppercase;
+        position: relative; }
+        header .navbar-nav .nav-item .nav-link .toggle-submenu {
+          position: absolute;
+          top: 0;
+          right: 0;
+          width: 50px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 100%; }
+          @media (min-width: 992px) {
+            header .navbar-nav .nav-item .nav-link .toggle-submenu {
+              display: none; } }
+        @media (min-width: 992px) {
           header .navbar-nav .nav-item .nav-link.active:after {
             content: '';
             position: absolute;
@@ -10108,23 +10122,23 @@ header {
             left: 0;
             background-color: #ECD9D9;
             width: 100%; } }
-    header .navbar-nav .nav-item .submenu {
-      padding-left: 20px;
-      display: none;
-      transition: 0.5s linear; }
-      @media (min-width: 992px) {
-        header .navbar-nav .nav-item .submenu {
-          display: block !important;
-          transform: rotateX(-90deg);
-          transform-origin: 0 0;
-          opacity: 0;
-          position: absolute;
-          top: 100%;
-          left: 0;
-          padding-left: 0px; } }
-      @media (min-width: 992px) {
-        header .navbar-nav .nav-item .submenu .nav-link {
-          white-space: nowrap; } }
+      header .navbar-nav .nav-item .submenu {
+        padding-left: 20px;
+        display: none;
+        transition: 0.5s linear; }
+        @media (min-width: 992px) {
+          header .navbar-nav .nav-item .submenu {
+            display: block !important;
+            transform: rotateX(-90deg);
+            transform-origin: 0 0;
+            opacity: 0;
+            position: absolute;
+            top: 100%;
+            left: 0;
+            padding-left: 0px; } }
+        @media (min-width: 992px) {
+          header .navbar-nav .nav-item .submenu .nav-link {
+            white-space: nowrap; } }
 
 .hero-section {
   padding: 150px 0;
@@ -10275,13 +10289,21 @@ header {
           .testimonials .testimonals-slider .testimonials-slider-item-data p {
             -webkit-line-clamp: 8; } }
 
-/*
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/style.scss to edit this template
-*/
-/*
-    Created on : Mar 30, 2023, 2:45:06 PM
-    Author     : frontend
-*/
+footer {
+  padding: 4.6rem 0 2.5rem;
+  text-align: center; }
+  footer .social-nav {
+    color: #ECD9D9;
+    font-size: 2rem;
+    margin-bottom: 1.9rem; }
+    footer .social-nav a {
+      margin-inline: 0.5rem; }
+      footer .social-nav a:hover {
+        color: #6c757d; }
+  footer p {
+    font-size: 1.2rem;
+    line-height: 4.1rem;
+    letter-spacing: -0.017rem;
+    font-weight: 400; }
 
 /*# sourceMappingURL=theme.css.map */
