--- a/public_html/scss/partials/_footer.scss
+++ b/public_html/scss/partials/_footer.scss
@@ -1,9 +1,21 @@
-/*
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/style.scss to edit this template
-*/
-/*
-    Created on : Mar 30, 2023, 2:45:06 PM
-    Author     : frontend
-*/
-
+footer{
+    padding: 4.6rem 0 2.5rem;
+    text-align: center;
+    .social-nav{
+        color: $primary;
+        font-size: 2rem;
+        margin-bottom: 1.9rem;
+        a{
+            margin-inline: 0.5rem;
+            &:hover{
+                color:$secondary;
+            }
+        }
+    }
+    p{
+        font-size: 1.2rem;
+        line-height: 4.1rem;
+        letter-spacing: -0.017rem;
+        font-weight: 400;
+    }
+}
