--- a/public_html/css/theme.css
+++ b/public_html/css/theme.css
@@ -10289,6 +10289,55 @@ header {
           .testimonials .testimonals-slider .testimonials-slider-item-data p {
             -webkit-line-clamp: 8; } }
 
+.latest-news .about-content h2, .latest-news .about-content .h2 {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 2.2rem;
+  line-height: 4rem;
+  text-align: left;
+  color: #1E1E1E;
+  margin-bottom: 2.5rem; }
+  @media (min-width: 1200px) {
+    .latest-news .about-content h2, .latest-news .about-content .h2 {
+      font-size: 4.4rem;
+      line-height: 5rem; } }
+
+.latest-news .about-content p {
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
+  font-size: 1.8rem;
+  line-height: 2.6rem;
+  text-align: left;
+  color: #1E1E1E;
+  margin-bottom: 3rem; }
+  @media (min-width: 1200px) {
+    .latest-news .about-content p:first-of-type {
+      font-size: 2rem;
+      line-height: 2.8rem; } }
+
+.latest-news .about-content figure {
+  width: 100%;
+  max-width: 74.8rem;
+  margin-bottom: 3rem; }
+  @media (min-width: 992px) {
+    .latest-news .about-content figure {
+      margin-bottom: 6.6rem; } }
+
+.latest-news .sidebar .input-group {
+  border: 0.1rem solid #1E1E1E; }
+
+.latest-news .sidebar .form-control {
+  border: none; }
+
+.latest-news .sidebar button {
+  border: none;
+  padding-left: 2rem; }
+  .latest-news .sidebar button .fa-solid {
+    font-size: 1.8rem;
+    color: #1E1E1E;
+    width: 0.1rem;
+    transform: rotateY(180deg); }
+
 footer {
   padding: 4.6rem 0 2.5rem;
   text-align: center; }
