--- a/public_html/scss/partials/_main.scss
+++ b/public_html/scss/partials/_main.scss
@@ -3,3 +3,5 @@
 @import "main/_services.scss";
 @import "main/_testimonials.scss";
 @import "main/_about.scss";
+@import "main/_blog.scss";
+@import "main/_pagination.scss";
