--- a/public_html/css/theme.css
+++ b/public_html/css/theme.css
@@ -10338,6 +10338,64 @@ header {
     width: 0.1rem;
     transform: rotateY(180deg); }
 
+.blog-news {
+  padding-bottom: 0.8rem; }
+  @media (min-width: 992px) {
+    .blog-news {
+      padding-top: 8.8rem !important; } }
+  .blog-news .blog-news-item div {
+    background-color: #fff;
+    width: 90%;
+    height: 16.1rem;
+    max-width: 31.3rem;
+    padding: 22px 18px 57px 19px;
+    text-align: center;
+    margin-inline: auto;
+    margin-top: -22%;
+    position: relative;
+    z-index: 9999; }
+    .blog-news .blog-news-item div p {
+      font-size: 1.4rem;
+      line-height: 1.7rem;
+      letter-spacing: 0.1rem;
+      text-align: center;
+      font-family: "Bodoni";
+      font-style: italic;
+      width: 8.1rem;
+      margin-bottom: 1.7rem;
+      display: inline-block; }
+    .blog-news .blog-news-item div h2, .blog-news .blog-news-item div .h2 {
+      font-family: "Lato", sans-serif;
+      font-weight: 400;
+      font-size: 1.6rem;
+      line-height: 2.4rem;
+      text-align: center;
+      width: 100%;
+      max-width: 27.6rem; }
+      .blog-news .blog-news-item div h2 a, .blog-news .blog-news-item div .h2 a {
+        color: #1E1E1E !important;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden; }
+
+.blog-news-pagination {
+  padding: 0.8rem 0 1.7rem; }
+  .blog-news-pagination .pagination {
+    text-align: center; }
+    .blog-news-pagination .pagination .page-link {
+      font-family: "Bodoni";
+      font-size: 1.6rem;
+      line-height: 2.4rem;
+      text-align: center;
+      color: #6c757d !important;
+      border: none !important;
+      background-color: #fff;
+      border: none !important;
+      box-shadow: none; }
+      .blog-news-pagination .pagination .page-link:hover, .blog-news-pagination .pagination .page-link.active {
+        color: #1E1E1E !important; }
+
 footer {
   padding: 4.6rem 0 2.5rem;
   text-align: center; }
