--- a/public_html/scss/partials/_overide-bootstrap.scss
+++ b/public_html/scss/partials/_overide-bootstrap.scss
@@ -45,7 +45,8 @@ $aspect-ratios: (
   "4x3": calc(3 / 4 * 100%),
   "16x9": calc(9 / 16 * 100%),
   "21x9": calc(9 / 21 * 100%),
-  "3x4": calc(248 / 372 * 100%)
+  "3x4": calc(248 / 372 * 100%),
+  "4x5": 80%
 );
 
 $spacer: 1rem;
