--- a/public_html/scss/partials/main/_latest-news.scss
+++ b/public_html/scss/partials/main/_latest-news.scss
@@ -42,6 +42,7 @@
                 text-align: center;
                 width: 100%;
                 max-width: 27.6rem;
+                text-transform: uppercase;
                 a{
                     color: $body-color!important;
                     display: -webkit-box;
