--- a/public_html/scss/partials/_main.scss
+++ b/public_html/scss/partials/_main.scss
@@ -5,3 +5,9 @@
 @import "main/_about.scss";
 @import "main/_blog.scss";
 @import "main/_pagination.scss";
+@import "main/_single-news.scss";
+@import "main/_services-section.scss";
+@import "main/_single-services.scss";
+@import "main/_contact.scss";
+@import "main/_company-info.scss";
+@import "main/_404-section.scss";
